# libLaserdockCore

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  dist.local.cmake  local.cmake  qt-installer-windows.qs.txt
example/: CMakeLists.txt  project.vcxproj.user.in
example/AngryLasers/: AngryLasers.pro  CMakeLists.txt
example/AngryLasers/src/: ldAngryLasers.cpp  ldAngryLasers.h
example/Arrow/: CMakeLists.txt
example/Arrow/res/: arrow.qrc  ldArrowVisualizer.lua
example/Arrow/src/: ldArrow.cpp  ldArrow.h
example/Pong/: CMakeLists.txt
example/Pong/src/: ldPong.cpp  ldPong.h
example/Serpent/: CMakeLists.txt
example/Serpent/src/: ldSerpent.cpp  ldSerpent.h
example/SpiralFighter/: CMakeLists.txt
example/SpiralFighter/src/: ldSpiralFighterGame.cpp  ldSpiralFighterGame.h
example/install/android/: ldAndroidApk.cmake  libLaserdockCore.jks
example/res/: qml.qrc
example/res/ios/: Info.plist
example/res/qml/: main.qml
example/resExt/ldva2/: Go-Go Girl.ldva2
example/src/: ldCoreExample.cpp  ldCoreExample.h  main.cpp
example/src/Games/: ldSpiralFighterGame.cpp
ldCore/: CMakeLists.txt
ldCore/include/ldCore/: ldCore.h  ldCore_global.h
ldCore/res/: laserdock.qrc
ldCore/res/shaders/: fshader.glsl  vshader.glsl
ldCore/src/: ldCore.cpp
ldCore/src/Android/: ldResourcesExtractor.cpp  ldZipExtractor.cpp
ldCore/src/Data/: ldDataDispatcher.cpp  ldDataDispatcherManager.cpp  ldFrameBuffer.cpp  ldHardwareDataWorker.cpp  ldThreadedDataWorker.cpp  ldThreadedDataWorker.h  ldUsbDataWorker.cpp
ldCore/src/Filter/: ldBasicFilters.cpp  ldDeadzoneFilter.cpp  ldFilter.cpp  ldFilterBasicData.cpp  ldFilterBasicGlobal.cpp  ldFilterColorize.cpp  ldFilterManager.cpp  ldFilterMovement.cpp  ldFilterProcessor.cpp  ldHardwareFilter.cpp  ldProjectionUtil.cpp  ldSoundLevelFilter.cpp
ldCore/src/Games/: ldAbstractGame.cpp  ldGamepad.cpp  ldGamepadCtrl.cpp
ldCore/src/Hardware/: ldAbstractHardwareManager.cpp  ldDeviceBufferConfigDelegator.cpp  ldHardware.cpp  ldHardwareBatch.cpp  ldHardwareInfo.cpp  ldHardwareManager.cpp  ldNetworkHardware.cpp  ldNetworkHardwareManager.cpp  ldUSBHardware.cpp  ldUSBHardwareManager.cpp
ldCore/src/Helpers/: ldEnumHelper.cpp  ldLaserController.cpp  ldLzrHelper.cpp  ldPropertyObject.cpp  ldRandomGenerator.cpp  ldWorkerThreadTimer.cpp
ldCore/src/Render/: ldAbstractRenderer.cpp  ldRendererOpenlase.cpp
ldCore/src/Settings/: ldSettings.cpp
ldCore/src/Shape/: ldAffineTransform.cpp  ldEffect.cpp  ldEffectManager.cpp  ldList.cpp  ldParticleGeometry.cpp  ldShader.cpp  ldShaderManager.cpp  ldShape.cpp
ldCore/src/Simulator/: ldQSGSimulatorItem.cpp  ldSimulatorEngine.cpp  ldSimulatorGrid.cpp  ldSimulatorItem.cpp  ldSimulatorProcessor.cpp  ldSimulatorProcessor.h  ldSimulatorRenderer.cpp
ldCore/src/Sound/: ldAudioDecoder.cpp  ldAudioFileDecoder.cpp  ldFFT.cpp  ldFFT.h  ldLoopbackAudioDevice.cpp  ldLoopbackAudioDevice.h  ldLoopbackAudioDeviceWorker.h  ldMidiDevice.cpp  ldQAudioInputDevice.cpp  ldQAudioInputDevice.h  ldSoundAnalyzer.cpp  ldSoundData.cpp  ldSoundDataProvider.cpp  ldSoundDeviceInfo.cpp  ldSoundDeviceManager.cpp  ldSoundInterface.cpp  ldSoundStubDevice.cpp  ldSoundStubDevice.h
ldCore/src/Task/: ldAbstractTask.cpp  ldTaskManager.cpp  ldTaskWorker.cpp
ldCore/src/Utilities/: ldBasicDataStructures.cpp  ldCompressedSample.cpp  ldRingBuffer.cpp  ldVertex.cpp  ldVertexFrame.cpp
ldCore/src/Visualizations/: ldLogoLaserdock.cpp  ldVisualizationTask.cpp  ldVisualizer.cpp
lib/: CMakeLists.txt
lib/Resources/shaders/: fshader.glsl
lib/ldCore/: ldCore.cpp  ldCore.h  ldCore_global.h
lib/ldCore/Data/: ldAbstractDataWorker.cpp  ldAbstractDataWorker.h  ldBufferManager.cpp  ldBufferManager.h  ldDataDispatcher.cpp  ldDataDispatcher.h  ldFrameBuffer.cpp  ldThreadedDataWorker.cpp  ldThreadedDataWorker.h  ldUsbDataWorker.cpp  ldUsbDataWorker.h
lib/ldCore/Filter/: ldBasicFilters.cpp  ldBasicFilters.h  ldColorUtils.cpp  ldColorUtils.h  ldDeadzoneFilter.cpp  ldDeadzoneFilter.h  ldFilter.cpp  ldFilter.h  ldFilterBasicData.cpp  ldFilterBasicData.h  ldFilterBasicGlobal.cpp  ldFilterBasicGlobal.h  ldFilterColorize.cpp  ldFilterColorize.h  ldFilterManager.cpp  ldFilterManager.h  ldProjectionUtil.cpp  ldProjectionUtil.h
lib/ldCore/Games/: ldAbstractGame.cpp  ldAbstractGame.h  ldGamepad.cpp  ldGamepadCtrl.cpp
lib/ldCore/Hardware/: ldAbstractHardwareManager.cpp  ldHardware.cpp  ldHardware.h  ldHardwareManager.cpp  ldHardwareManager.h  ldUSBHardware.cpp  ldUSBHardware.h  ldUSBHardwareManager.cpp  ldUSBHardwareManager.h
lib/ldCore/Helpers/: ldLaserController.cpp  ldLaserController.h  ldLzrHelper.cpp  ldRandomGenerator.cpp  ldRandomGenerator.h
lib/ldCore/Render/: ldAbstractRenderer.cpp  ldAbstractRenderer.h  ldRendererManager.cpp  ldRendererManager.h  ldRendererOpenlase.cpp  ldRendererOpenlase.h
lib/ldCore/Shape/: ldAffineTransform.cpp  ldAffineTransform.h  ldEffect.cpp  ldEffect.h  ldEffectManager.cpp  ldEffectManager.h  ldList.cpp  ldParticleGeometry.h  ldShader.cpp  ldShader.h  ldShape.cpp  ldShape.h
lib/ldCore/Simulator/: ldSimulatorEngine.cpp  ldSimulatorEngine.h  ldSimulatorItem.cpp  ldSimulatorRenderer.cpp  ldSimulatorRenderer.h
lib/ldCore/Sound/: ldAudioDecoder.cpp  ldAudioDecoder.h  ldFFT.cpp  ldFFT.h  ldLoopbackAudioDevice.h  ldLoopbackAudioDeviceWorker.cpp  ldLoopbackAudioDeviceWorker.h  ldMidiDevice.cpp  ldMidiDevice.h  ldQAudioInputDevice.cpp  ldQAudioInputDevice.h  ldSoundData.cpp  ldSoundData.h  ldSoundDeviceInfo.cpp  ldSoundDeviceManager.cpp  ldSoundDeviceManager.h  ldSoundInterface.cpp  ldSoundInterface.h  ldSoundStubDevice.cpp  ldSoundStubDevice.h
lib/ldCore/Task/: ldAbstractTask.cpp  ldAbstractTask.h  ldTaskManager.cpp  ldTaskManager.h  ldTaskWorker.cpp
lib/ldCore/Tests/: CMakeLists.txt
lib/ldCore/Utilities/: gettimeofday_win.h  ldBasicDataStructures.cpp  ldBasicDataStructures.h  ldRingBuffer.h  (+1 more)
lib/license/: COPYING.Roboto.txt
lib/tests/: CMakeLists.txt
modules/Box2d/: CMakeLists.txt
modules/ldLuaGame/: CMakeLists.txt
modules/ldRazer/: CMakeLists.txt
tests/: CMakeLists.txt
(+782 files in other folders)
